Fixed tests to work with javafx modules